# Boutique-management-system

./: BoutiqueManager.cpp  BoutiqueManager.h  CMakeLists.txt  Makefile  README.md  boutique  boutique.cpp  boutique.h  cashier.cpp  cashier.h  children.cpp  children.h  customer.cpp  customer.h  customers.json  employee.cpp  employee.h  employees.json  female.cpp  female.h  inventory.cpp  inventory.h  inventory.json  main.cpp  male.cpp  male.h  product.cpp  product.h  product.json  r.out  salesman.cpp  salesman.h  salesman.json  sweeper.cpp  sweeper.h  sweeper.json
